<resources>
    <string name="app_name">Kapil Guru Student</string>
    <string name="ok">OK</string>
    <string name="invalid_email">please enter valid email</string>
    <string name="invalid_password">Please enter valid Password</string>
    <string name="try_again">Please try again after some time</string>
    <string name="prompt_email">Email</string>
    <string name="username_hint">Email ID</string>
    <string name="hint_email">Email *</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password_characters">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">LogIn</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="signup">Don’t have an account? </string>
    <string name="signup_label">Sign Up</string>
    <string name="login_with_otp">LOGIN WITH OTP</string>
    <string name="or">OR</string>
    <string name="terms_and_conditions_login">By continuing and signing in, you agree to Kapil Guru <a href="https://kapilguru.com/terms-and-conditions"><b>Terms &amp; Conditions </b></a>and <a href="https://kapilguru.com/privacy-policy"><b>Privacy Policy.</b></a></string>
    <string name="invalid_credentials">Please Enter correct password</string>
    <string name="user_not_registered">User is not Registered</string>
    <string name="login_exceeded">No of logins exceeded</string>
    <string name="login_with_otp_heading">Login with OTP</string>
    <string name="enter_mail_or_phone">Enter your register Email ID / Phone no</string>
    <string name="enter_registered_phone">Enter your registered Phone no.</string>
    <string name="enter_registered_email">Enter your registered email id</string>
    <string name="request_otp">Request OTP</string>
    <string name="verify_and_proceed">Verify and Proceed</string>
    <string name="otp_sent_successfully">OTP sent successfully to %s</string>
    <string name="otp_resent">OTP sent successfully</string>
    <string name="otp_sent_to">OTP sent successfully to %1s</string>
    <string name="full_name_man">Full Name *</string>
    <string name="signup_trems">Please Note: By continuing and signing in, you agree to Kapil Guru <a href="https://kapilguru.com/terms-and-conditions"><b>Terms &amp; Conditions </b></a>and <a href="https://kapilguru.com/privacy-policy"><b>Privacy Policy.</b></a>.</string>
    <string name="authenticate_with">Authenticate with</string>
    <string name="otp_mail">3 Digit OTP Sent to mail %1$s</string>
    <string name="otp_phone">6 Digit OTP Sent to phone number</string>
    <string name="masked_phone_number">XXXXXX%S</string>
    <string name="masked_mail">XXXXXX%S</string>
    <string name="authenticate">Authenticate</string>
    <string name="authenticate_to_update">Please authenticate to update information</string>
    <string name="enter_password">Enter Password</string>
    <string name="payment_details">PaymentDetails</string>
    <string name="hint_otp_mail">OTP sent to Mail</string>
    <string name="hint_otp_mobile">OTP sent to Mobile</string>
    <string name="have_account">Already have an account ?</string>
    <string name="set_password">Set Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="validate_otp">Validate OTP</string>
    <string name="please_enter_otp">Please enter otp sent to %1$s</string>
    <string name="validate">Validate</string>
    <string name="create_password">Create Password</string>
    <string name="password">Password</string>
    <string name="enter_new_password">ENTER NEW PASSWORD</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="actual_fee">Actual Fee *</string>
    <string name="offer_price">offer price *</string>
    <string name="enrolled_students_edit_batch_txt">Can\'t edit Batch once students are Enrolled</string>
    <string name="edit_webinar">You can\'t edit approved Webinar.</string>
    <string name="editor">Editor</string>
    <string name="webinar_delete">Yes Delete</string>
    <string name="delete_webinar">You can\'t delete approved Webinar.</string>
    <string name="ongoing">OnGoing</string>
    <string name="sendingforapproval">Not Approved</string>
    <string name="upcoming">Upcoming</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="get_otp">Get OTP</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_myclassroom">My Class Room</string>
    <string name="title_referandearn">Refer &amp; Earn</string>
    <string name="title_howtouse">How to Use</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="reports">Reports</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="hint_name">Name *</string>
    <string name="trainer_id">Trainer ID</string>
    <string name="bank_details">Bank Details</string>
    <string name="download_certificate">Download Certificate</string>
    <string name="change_password">Change password</string>
    <string name="profile_details">Profile Details</string>
    <string name="contact_Number">Contact Number</string>
    <string name="hint_contact_Number">Contact Number *</string>
    <string name="country_code_hint">+91</string>
    <string name="alternate_contact_number">Alternate Contact Number</string>
    <string name="currency">Currency</string>
    <string name="address">Address</string>
    <string name="batch_code_hyphen">Batch Code- %s</string>
    <string name="schema_code_hyphen">Schema Code- %s</string>
    <string name="hint_address">Address *</string>
    <string name="pin_code">Pin Code</string>
    <string name="type_of_business">Select type of business</string>
    <string name="business_individual">Individual</string>
    <string name="business_organisation">Organisation</string>
    <string name="company_name">Company Name</string>
    <string name="company_web_site">Company Website URL</string>
    <string name="gst_register">Did you Register for GST</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_gst_number">Enter 15 digit GST Number</string>
    <string name="hint_gst_number">123456789789454</string>
    <string name="describe_about_you">Describe about you</string>
    <string name="hint_describe_about_you">Good in angular</string>
    <string name="account_name_man">Account Name *</string>
    <string name="hint_account_name">Ritwik</string>
    <string name="account_number">Account Number *</string>
    <string name="bank_name_man">Bank Name *</string>
    <string name="branch_name_man">Branch Name *</string>
    <string name="ifsc_code_man">IFSC Code *</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="hint_trainer_id">Kapilguru0005</string>
    <string name="hint_pincode_mand">Zip/Postal Code *</string>
    <string name="hint_pincode">Zip/Postal Code</string>
    <string name="Edit">Edit</string>
    <string name="request_batch">Request Batch</string>
    <string name="Enter_OTP">Enter OTP</string>
    <string name="otp_desc">Please enter the 6 digit OTP sent to your primary number</string>
    <string name="subscription">Subscription</string>
    <string name="update_profile_mandatory">To proceed further, Please click on edit and update Profile.</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_mand">Address*</string>
    <string name="area">Area</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="announcements">Announcements</string>
    <string name="select_batch">Select Batch</string>
    <string name="subject">Subject</string>
    <string name="add_subject">Add a subject</string>
    <string name="subject_mandatory">Subject *</string>
    <string name="enter_message_mandatory">Enter Message *</string>
    <string name="hint_enter_message">Enter a Message</string>
    <string name="send">Send</string>
    <string name="Message">Message</string>
    <string name="batch_code_text">Batch Code</string>
    <string name="trainer_colon_string">Trainer : %s</string>
    <string name="trainer_id_colon_string">Trainer Id : %s</string>
    <string name="guest_lecture_title">Guest Lecture Title</string>
    <string name="start_time">Start Time</string>
    <string name="lecture_id">Lecture Id</string>
    <string name="enrolled_students">Enrolled Students</string>
    <string name="webinar_title">Webinar Title</string>
    <string name="speaker_name">Speaker Name</string>
    <string name="webinar_id">Webinar Id</string>
    <string name="next_class_date">Next Class Date</string>
    <string name="batch_code">Batch Code</string>
    <string name="batch_days">Batch Days</string>
    <string name="trainer_name_man">Trainer Name *</string>
    <string name="start_date">Start Date *</string>
    <string name="start_date_">Start Date</string>
    <string name="batch_time">Batch Time</string>
    <string name="batch_timing">Batch Timing</string>
    <string name="overview">OverView</string>
    <string name="study_material">Study Material</string>
    <string name="exam">Exam</string>
    <string name="completion_request">Completion Request</string>
    <string name="course_title">Course Title</string>
    <string name="trainer">Trainer</string>
    <string name="batch_status">Batch Status</string>
    <string name="students">Students</string>
    <string name="students_accepting_String">%s Students</string>
    <string name="course_progress">Course Progress</string>
    <string name="course_percentage">Course Percentage</string>
    <string name="batch_start_date">Batch Start Date</string>
    <string name="batch_type">Batch Type</string>
    <string name="batch_available_days">Batch available days</string>
    <string name="course_duration">Course Duration</string>
    <string name="course_duration_colon">Course Duration :</string>
    <string name="fee">Fee</string>
    <string name="batch_end_date">Batch End Date</string>
    <string name="trainer_complaint">Complaint on Trainer</string>
    <string name="request_refund">Request Refund</string>
    <string name="note">Note :- </string>
    <string name="no_refund">No Refund will be provided after first two classes</string>
    <string name="duration">Duration</string>
    <string name="course_fee">Course Fee</string>
    <string name="all">All</string>
    <string name="low_to_high">Low To High</string>
    <string name="high_to_low">High to Low</string>
    <string name="less_than_30_days">less than 30 Days</string>
    <string name="thirty_31_to_60_days">31-60 Days</string>
    <string name="thirty_61_to_90_days">61 to 90 Days</string>
    <string name="greather_than_90_days">greater than 90 Days</string>
    <string name="weekday">Weekday</string>
    <string name="weekend">Weekend</string>
    <string name="apply">Apply</string>
    <string name="certificate_caps">CERTIFICATE</string>
    <string name="contactNumber">+91 82870 01234</string>
    <string name="info_mail">info@kapilguru.com</string>
    <string name="certificate_text">The secret of Getting Ahead is Getting a Certificate from Kapil Guru Live Online Training Platform</string>
    <string name="get_more_information">Get More Information</string>
</resources>